refactor: 💡 cleanup placeholder text in email template

--- a/emails/contact/index.html
+++ b/emails/contact/index.html
@@ -19,12 +19,7 @@
       <span style="color: rgb(129, 61, 192); font-weight: 500">OTG</span>
       Solutions contact form
     </h1>
-    <p style="line-height: 1.5rem; margin: 0 auto">
-      Hei, jeg trenger en råfin nettside please hjelp Hei, jeg trenger en råfin
-      nettside please hjelp Hei, jeg trenger en råfin nettside please hjelp Hei,
-      jeg trenger en råfin nettside please hjelp Hei, jeg trenger en råfin
-      nettside please hjelp
-    </p>
+    <p style="line-height: 1.5rem; margin: 0 auto">{{m}}</p>
     <br />
     <p>E-post: {{e}}</p>
     <p>Tlf: {{p}}</p>
