--- a/emails/contact/index.html
+++ b/emails/contact/index.html
@@ -7,9 +7,10 @@
   <body
     style="
       font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-      margin: 0 auto;
+      margin: 2rem auto;
       padding: 2rem;
       max-width: 70ch;
+      background-color: whitesmoke;
     "
   >
     <h1
@@ -19,10 +20,24 @@
       <span style="color: rgb(129, 61, 192); font-weight: 500">OTG</span>
       Solutions contact form
     </h1>
-    <p style="line-height: 1.5rem; margin: 0 auto">{{m}}</p>
-    <br />
-    <p>E-post: {{e}}</p>
-    <p>Tlf: {{p}}</p>
-    <p>- {{n}}</p>
+    <div
+      style="
+        box-shadow: 0px 3px 0px #b6b6ff;
+        border: 1px solid #bbb6ff;
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        min-height: 30ch;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      "
+    >
+      <p style="line-height: 1.5rem; margin-bottom: 1rem">{{m}}</p>
+      <div style="font-size: 0.8rem">
+        <p>E-post: {{e}}</p>
+        <p>Tlf: {{p}}</p>
+        <p>- {{n}}</p>
+      </div>
+    </div>
   </body>
 </html>
